// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PatientsSummary /> should renders with Disclaimer Modal correctly 1`] = `
<section
  className="page-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={12}
    >
      <div
        className="panel panel-primary"
      >
        <PatientsSummaryListHeader
          onCategorySelected={[Function]}
          selectedCategory={
            Object {
              "allergies": true,
              "contacts": true,
              "medications": true,
              "problems": true,
            }
          }
        />
        <div
          className="panel-body"
        >
          <div
            className="dashboard"
          >
            <SimpleDashboardPanel
              goToState={[Function]}
              items={
                Array [
                  "Loading ...",
                  "",
                  "",
                  "",
                ]
              }
              key="0"
              navigateTo={[Function]}
              state="diagnoses"
              title="Problems"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              items={
                Array [
                  "Loading ...",
                  "",
                  "",
                  "",
                ]
              }
              key="1"
              navigateTo={[Function]}
              state="contacts"
              title="Contacts"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              items={
                Array [
                  "Loading ...",
                  "",
                  "",
                  "",
                ]
              }
              key="2"
              navigateTo={[Function]}
              state="allergies"
              title="Allergies"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              items={
                Array [
                  "Loading ...",
                  "",
                  "",
                  "",
                ]
              }
              key="3"
              navigateTo={[Function]}
              state="medications"
              title="Medications"
            />
          </div>
        </div>
      </div>
    </Col>
  </Row>
  <ConfirmationModal
    isShow={true}
    isShowCancelButton={false}
    isShowOkButton={true}
    onHide={[Function]}
    onOk={[Function]}
    textCancelButton="Cancel"
    textOkButton="Ok"
    title="Notification"
  >
    <span>
      You was redirected to your home page because you are logged in as a PHR user.
    </span>
  </ConfirmationModal>
</section>
`;

exports[`Component <PatientsSummary /> should renders with all props correctly 1`] = `
<section
  className="page-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={12}
    >
      <div
        className="panel panel-primary"
      >
        <PatientsSummaryListHeader
          onCategorySelected={[Function]}
          selectedCategory={
            Object {
              "allergies": true,
              "contacts": true,
              "medications": true,
              "problems": true,
            }
          }
        />
        <div
          className="panel-body"
        >
          <div
            className="dashboard"
          >
            <SimpleDashboardPanel
              goToState={[Function]}
              items={
                Array [
                  "Loading ...",
                  "",
                  "",
                  "",
                ]
              }
              key="0"
              navigateTo={[Function]}
              state="diagnoses"
              title="Problems"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              items={
                Array [
                  "Loading ...",
                  "",
                  "",
                  "",
                ]
              }
              key="1"
              navigateTo={[Function]}
              state="contacts"
              title="Contacts"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              items={
                Array [
                  "Loading ...",
                  "",
                  "",
                  "",
                ]
              }
              key="2"
              navigateTo={[Function]}
              state="allergies"
              title="Allergies"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              items={
                Array [
                  "Loading ...",
                  "",
                  "",
                  "",
                ]
              }
              key="3"
              navigateTo={[Function]}
              state="medications"
              title="Medications"
            />
          </div>
        </div>
      </div>
    </Col>
  </Row>
</section>
`;
